[tool.poetry]
name = "python-for-algorithms-data-structures-and-interviews"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "python_for_algorithms_data_structures_and_interviews"}]

[tool.poetry.dependencies]
python = "3.10.10"
nose = "^1.3.7"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
